[tool.poetry]
name = "online-chat"
version = "0.1.0"
description = ""
authors = ["alex1331 <danilin999@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
motor = "^3.4.0"
uvicorn = {extras = ["all"], version = "^0.29.0"}
ipython = "^8.23.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
